--- a/package.json
+++ b/package.json
@@ -2,11 +2,22 @@
   "name": "language-bogl",
   "version": "0.1.0",
   "description": "BoGL support in Atom",
+  "repository": "https://github.com/montymxb/language-bogl.git",
+  "homepage": "https://github.com/montymxb/tree-sitter-bogl.git",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "keywords": [
+    "bogl",
+    "board",
+    "game",
+    "language",
+    "grammar",
+    "syntax",
+    "treesitter"
+  ],
+  "author": "Benjamin Wilson Friedman",
   "license": "ISC",
   "dependencies": {
     "tree-sitter-bogl": "^0.3.7"
