--- a/package.json
+++ b/package.json
@@ -21,5 +21,8 @@
   "license": "ISC",
   "dependencies": {
     "tree-sitter-bogl": "^0.3.7"
+  },
+  "engines": {
+    "atom": ">=1.45.0 <2.0.0"
   }
 }
